refactor: use jsonPatch to update editable fields
